--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ description = "Work with native sol types while ensuring they are being deserial
 alloy-primitives = { version = "0.6", default-features = false, features = ["std"] }
 serde = { version = "1.0.195", features = ["derive"]}
 paste = "1.0.14"
+hex = "0.4.3"
